--- a/styles.css
+++ b/styles.css
@@ -1049,6 +1049,40 @@ footer p {
   background-color: #333;
 }
 
+.main-section-video {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+}
+
+.main-section-vid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+}
+
+.video-container {
+  width: 90%;
+  height: 90%;
+}
+
+.video-container-d {
+  width: 90%;
+  height: 90%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 /* Modo oscuro */
 body.dark-mode .community-section {
   background-color: #1a1a1a;
